Added comments to nodes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
         <div>
           <h3>Contact me</h3>
           <h4>Twitter</h4>
-          <p><a href="http://twitter.com/JesseDearing" target="_blank"><img src="http://twitter-badges.s3.amazonaws.com/t_small-a.png" alt="@JesseDearing" /></a></p>
+          <p><a href="http://twitter.com/JesseDearing" target="_blank"><img id="twitter_image" src="http://twitter-badges.s3.amazonaws.com/t_small-a.png" alt="@JesseDearing" /></a></p>
 
 </div>
 <h4>Email</h4>
