--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Jesse Dearing.com</title>
   <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <script type="text/javascript" src="https://www.google.com/jsapi?key=ABQIAAAArtvuSGqQMOpQjvKf2hAm2xThLvONqfAEuMVsnAiPkAfmAuHWCRTPKfhA8Ke5iwZOzmnZy0UzoqmFyg"></script>
   <%= csrf_meta_tag %>
   <link href='http://fonts.googleapis.com/css?family=Neuton:regular,italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Anonymous+Pro:regular,bold' rel='stylesheet' type='text/css'>
@@ -17,5 +17,10 @@
   </div>
   <%= render 'layouts/footer' %>
   <%= stylesheet_link_tag 'gist.css' %>
+  <script type="text/javascript">
+    google.load('jquery', '1.5.1');
+    google.load('jqueryui', '1.8.10');
+  </script>
+  <%= javascript_include_tag "application.js" %>
 </body>
 </html>
