--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,5 +22,6 @@
     google.load('jqueryui', '1.8.10');
   </script>
   <%= javascript_include_tag "application.js" %>
+  <%= javascript_include_tag "http://www.google.com/recaptcha/api/js/recaptcha_ajax.js" %>
 </body>
 </html>
