A metric shitton of changes
Added JavaScript validations
Added SEO-friendly links
Abstracted comment form to a partial
Added is_complete column

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,49 +1,1 @@
-<style type="text/css">
-#comment_title
-{
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
-}
-</style>  
-<% form_for(:comment, @comment, :url => {:action => 'create' }) do |f|%>
-<fieldset>
-  <legend>New Comment</legend>
-  <div>
-  <label for="comment_name">
-    Your Name
-  </label>
-  <%= f.text_field :name %>
-  </div>
-  <div>
-  <label for="comment_email">
-    Your Email
-  </label>
-  <%= f.text_field :email %>
-    <div>
-      <small>Your email won't be spammed or displayed publicly</small>
-    </div>
-  </div>
-  <div>
-  <label for="comment_url">
-    Your Homepage
-  </label>
-  <%= f.text_field :url %>
-  </div>
-  <div>
-  <label for="comment_body">
-    Your comment
-  </label>
-    <div>
-      <%= f.text_area :body %>
-    </div>
-  </div>
-  <div id="captcha_block">
-  </div>
-  <input id="comment_title" name="comment_title" type="text" tabindex="-1" />
-  <%= submit_tag "Post comment" %>
-</fieldset>
-<% end %>
-<script type="text/javascript">
-  Recaptcha.create("<%= RCC_PUB %>", "captcha_block", {theme: 'white'});
-</script>
+<%= render :partial => 'comment_form' %>
