--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,17 +1,17 @@
 <div id="comment-<%= comment.id %>" class="comment">
-  <span class="gravatar">
-    <img src="<%= gravatar_url(comment.email) %>" />
-  </span>
   <div class="comment_body">
     <%= comment.body %>
   </div>
   <div class="comment_info">
+  <span class="gravatar">
+    <img src="<%= gravatar_url(comment.email) %>" align="center" />
+  </span>
     <% if comment.url %>
       <%= link_to(comment.name, comment.url) %>
     <% else %>
       <%= comment.name %>
     <% end %>
     &mdash;
-    <%= comment.publish_date.strftime("%c") %>
+    <%= comment.created_at.strftime("%B %e, %Y %r") %>
   </div>
 </div>
