--- a/app/views/nodes/_node.html.erb
+++ b/app/views/nodes/_node.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h3 class="node_title"><%= link_to(node.title, node_path(node)) %></h3>
+  <h3 class="node_title"><%= link_to(node.title, "#{node_path(node)}/#{seoize(node.title)}") %></h3>
   <% if show_teaser %>
     <%= raw node.teaser %>
   <% else %>
