--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,10 +6,10 @@
   <span class="gravatar">
     <img src="<%= gravatar_url(comment.email) %>" align="center" />
   </span>
-    <% if comment.url %>
-      <%= link_to(comment.name, comment.url) %>
-    <% else %>
+    <% if comment.url.empty? %>
       <%= comment.name %>
+    <% else %>
+      <%= link_to(comment.name, comment.url, :rel => 'nofollow') %>
     <% end %>
     &mdash;
     <%= comment.created_at.strftime("%B %e, %Y %r") %>
