--- a/app/views/admin/login.html.erb
+++ b/app/views/admin/login.html.erb
@@ -8,7 +8,7 @@
       </div>
       <div>
         <%= label_tag :password, "Password" %>
-        <%= text_field_tag :password %>
+        <%= password_field_tag :password %>
       </div>
       <%= submit_tag "Login" %>
     <% end %>
