--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,11 +3,8 @@
 <head>
   <title>Jesse Dearing.com</title>
   <%= stylesheet_link_tag :all %>
-  <script type="text/javascript" src="https://www.google.com/jsapi?key=ABQIAAAArtvuSGqQMOpQjvKf2hAm2xThLvONqfAEuMVsnAiPkAfmAuHWCRTPKfhA8Ke5iwZOzmnZy0UzoqmFyg"></script>
-  <script type="text/javascript">
-    google.load('jquery', '1.4.2');
-    google.load('jqueryui', '1.8.10');
-  </script>
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" %>
+  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js" %>
   <%= javascript_include_tag "application.js" %>
   <%= javascript_include_tag "http://www.google.com/recaptcha/api/js/recaptcha_ajax.js" %>
   <%= javascript_include_tag 'http://ajax.microsoft.com/ajax/jquery.validate/1.7/jquery.validate.min.js' %>
