Fixed issues from W3C validator

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,6 @@
 <%= yield %>
   </div>
   <%= render 'layouts/footer' %>
-  <%= stylesheet_link_tag 'gist.css' %>
+  <%= stylesheet_link_tag 'gist.css', :itemprop => 'gist_styles' %>
 </body>
 </html>
