Added paging and RSS feeds

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -52,20 +52,23 @@ while(x=eval(x));}hiveware_enkoder();
         <h3>About Me</h3>
         <%= image_tag('me-blackandwhite.jpg', :id => 'me') %>
         <p>
-          My name is Jesse Dearing and I am a 27 year-old software developer from Dallas, TX.
-          I focus on web development which includes but is not limited to sites, APIs, 
-          front-end, back-end, sysadmin, and database. I guess you could say that I am a
-          <a href="http://forge38.com/blog/2008/06/full-stack-web-developers/" target="_blank">full stack web developer</a>
-          or at least striving to be one. My current language/framework of choice is Ruby on Rails.
-          I have worked in C# on ASP.NET and PHP.
+        My name is Jesse Dearing and I am a 27 year-old software developer from Dallas, TX.
+        I focus on web development which includes but is not limited to sites, APIs, 
+        front-end, back-end, sysadmin, and database. I guess you could say that I am a
+        <a href="http://forge38.com/blog/2008/06/full-stack-web-developers/" target="_blank">full stack web developer</a>
+        or at least striving to be one. My current language/framework of choice is Ruby on Rails.
+        I have worked in C# on ASP.NET and PHP.
         </p>
         <p>
-          I support Open Source Software and try to contribute where I can in awareness, adoption,
-          and donation of code, time, effort, and sometimes even money.
+        I support Open Source Software and try to contribute where I can in awareness, adoption,
+        and donation of code, time, effort, and sometimes even money.
         </p>
         <p>
-          I am married to my lovely wife Katie and I am an animal advocate as evidenced by my adoption of 3 cats and
-          a dog (all shelter/found animals).
+        I am married to my lovely wife Katie whom I've been married to for 3 years. I am an animal person and this is 
+        evidenced by 3 cats and a dog with a whole bunch of fur everywhere.
+        </p>
+        <p>
+        I hope that you find my posts to be helpful.
         </p>
       </div>
       <div class="clear"></div>
