--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <title>Jesse Dearing.com</title>
+  <meta name="description" content="My name is Jesse Dearing and I am a full-stack developer. This is where I write about stuff that interests me" />
+  <meta name="keywords" content="full stack developer,developer,ruby,rails,dearing,php,open source,devops" />
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" %>
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js" %>
@@ -22,5 +24,6 @@
   </div>
   <%= render 'layouts/footer' %>
   <%= stylesheet_link_tag 'gist.css', :itemprop => 'gist_styles' %>
+  <%= google_analytics %>
 </body>
 </html>
