The output from the google_analytics method is raw

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,6 @@
   </div>
   <%= render 'layouts/footer' %>
   <%= stylesheet_link_tag 'gist.css', :itemprop => 'gist_styles' %>
-  <%= google_analytics %>
+  <%= raw google_analytics %>
 </body>
 </html>
