--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<div id="comment-<%= comment.id %>" class="comment">
+<div id="comment-<%= comment.id %>" class="comment<%= ' author_comment' if comment.is_author? %>">
   <div class="comment_body">
     <%= comment.body %>
   </div>
