Upgraded rails, added unicorn stuff, and paging

--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -8,8 +8,9 @@
 <div class="clear"></div>
 <% if @total_post_count > 5 %>
   <div class="grid_16">
-    <% (@total_post_count / 5).each do |pg| %>
-      <a href="<%= root_path %>?page=<%= pg %>"><%= pg %></a> |
+    <a href="<%= root_path %>?page=1">1</a>
+    <% (@total_post_count / 5).times do |pg| %>
+      | <a href="<%= root_path %>?page=<%= pg + 2 %>"><%= pg + 2 %></a>
     <% end %>
   </div>
   <div class="clear"></div>
