Cleaned up some vies

--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -1,8 +1,6 @@
 <div class="grid_16" id="main_content">
   <div class="padded">
-    <% @posts.each do |post| %>
-      <%= render :partial => "node", :locals => { :show_teaser => true }, :object => post %>
-    <% end %>
+    <%= render :partial => "node", :locals => { :show_teaser => true }, :collection => @posts %>
   </div>
 </div>
 <div class="clear"></div>
