--- a/app/views/nodes/_node.html.erb
+++ b/app/views/nodes/_node.html.erb
@@ -7,7 +7,9 @@
   <% end %>
   <div class="node_status">
     <span class="read_more"><%= link_to node.publish_date.strftime("%B %d, %Y"), node %></span>
+    <% if node.can_comment? %>
     <span class="comment_count"><%= link_to("Comments(#{node.comment_count})",node_path(node, :anchor => 'comments')) %></span>
+    <% end %>
   </div>
 </div>
 
