--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -4,12 +4,7 @@
   </div>
 </div>
 <div class="clear"></div>
-<% if @total_post_count > 5 %>
-  <div class="grid_16">
-    <a href="<%= root_path %>?page=1">1</a>
-    <% (@total_post_count / 5).times do |pg| %>
-      | <a href="<%= root_path %>?page=<%= pg + 2 %>"><%= pg + 2 %></a>
-    <% end %>
-  </div>
+<% if @total_post_count > 6 && @posts.size == 6 %>
+  <%= raw paging %>
   <div class="clear"></div>
 <% end %>
