--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -1,6 +1,7 @@
 <%
 title @post.title
 %>
+<% cache do %>
 <div class="grid_16" id="main_content">
   <div class="padded">
     <%= render :partial => "node", :locals => {:show_teaser => false}, :object => @post %>
@@ -10,7 +11,7 @@ title @post.title
 <% if @post.can_comment? %>
 <div class="grid_12 padded" id="comments">
   <h4>Comments</h4>
-  <p><a href="javascript:JD.new_comment(<%= params[:id] %>);" id="comment_new_link">Post New Comment &raquo;</a></p>
+  <p><a href="javascript:JD.new_comment(<%= params[:id].to_i %>);" id="comment_new_link">Post New Comment &raquo;</a></p>
   <div id="comment_new"></div>
 </div>
 <div class="clear"></div>
@@ -21,6 +22,7 @@ title @post.title
     <p class="no_comments">Nobody has commented on this yet.</p>
   <% end %>
 </div>
+<% end %>
 <% end %>
 <div class="clear"></div>
 <script type="text/javascript">
