--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -3,8 +3,8 @@
     <% if params[:page] %>
       <%= render :partial => "node", :locals => { :show_teaser => true }, :collection => @posts %>
     <% else %>
-      <% cache(:action => 'index') do %>
-          <%= render :partial => "node", :locals => { :show_teaser => true }, :collection => @posts %>
+      <% cache do %>
+        <%= render :partial => "node", :locals => { :show_teaser => true }, :collection => @posts %>
       <% end %>
 <% end %>
   </div>
