Refactored some code
Made POSTS_ON_FRONT_PAGE constant to remove magic number
Moved comment recaptacha validation logic into comment model

--- a/app/views/nodes/index.html.erb
+++ b/app/views/nodes/index.html.erb
@@ -10,7 +10,5 @@
   </div>
 </div>
 <div class="clear"></div>
-<% if @total_post_count > 6 && @posts.size == 6 %>
-  <%= raw paging %>
-  <div class="clear"></div>
-<% end %>
+<%= raw paging(@total_post_count, @posts.size) %>
+<div class="clear"></div>
