--- a/app/views/nodes/show.html.erb
+++ b/app/views/nodes/show.html.erb
@@ -1,7 +1,7 @@
 <%
 title @post.title
 %>
-<% cache do %>
+<% cache("node#{@post.id}") do %>
 <div class="grid_16" id="main_content">
   <div class="padded">
     <%= render :partial => "node", :locals => {:show_teaser => false}, :object => @post %>
