Added HTML5 header and footer tags

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,4 @@
+  <footer>
   <div id="footer" class="black_background">
     <div class="container_16">
       <div class="grid_4">
@@ -74,4 +75,4 @@ while(x=eval(x));}hiveware_enkoder();
       <div class="clear"></div>
     </div>
   </div>
-
+  </footer>
