--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<header>
 <a href="http://github.com/jessedearing"><img style="position: absolute; top: 0; right: 0; border: 0; padding: 0;" src="https://assets0.github.com/img/4c7dc970b89fd04b81c8e221ba88ff99a06c6b61?repo=&amp;url=http%3A%2F%2Fs3.amazonaws.com%2Fgithub%2Fribbons%2Fforkme_right_white_ffffff.png&amp;path=" alt="Fork me on GitHub"></a>
 <% if session[:authenticated_as] == :admin %>
 <div class="container_16">
@@ -15,3 +16,4 @@
     </div>
     <div class="clear"></div>
   </div>
+</header>
