Added infinite scroll

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
   <%= javascript_include_tag "http://www.google.com/recaptcha/api/js/recaptcha_ajax.js" %>
   <%= javascript_include_tag "application.js" %>
   <%= javascript_include_tag 'jquery.validate.min.js' %>
+  <%= javascript_include_tag 'jquery.infinitescroll.min.js' %>
   <%= raw google_analytics %>
   <%= yield(:javascripts) %>
 </body>
