Made stylesheet includes seperate

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
   <meta name="description" content="My name is Jesse Dearing and I am a full-stack developer. This is where I write about stuff that interests me" />
   <meta name="keywords" content="full stack developer,developer,ruby,rails,dearing,php,open source,devops" />
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" %>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag "960.css" %>
+  <%= stylesheet_link_tag "application.css" %>
   <%= csrf_meta_tag %>
   <link href='http://fonts.googleapis.com/css?family=Neuton:regular,italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Anonymous+Pro:regular,bold' rel='stylesheet' type='text/css'>
