--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -57,16 +57,15 @@ while(x=eval(x));}hiveware_enkoder();
         I focus on web development which includes but is not limited to sites, APIs, 
         front-end, back-end, sysadmin, and database. I guess you could say that I am a
         <a href="http://forge38.com/blog/2008/06/full-stack-web-developers/" target="_blank">full stack web developer</a>
-        or at least striving to be one. My current language/framework of choice is Ruby on Rails.
-        I have worked in C# on ASP.NET and PHP.
+        or at least striving to be one. I am currently a Ruby developer working mainly with Rails and Chef, but I have
+        worked in PHP in the past as well.
         </p>
         <p>
         I support Open Source Software and try to contribute where I can in awareness, adoption,
         and donation of code, time, effort, and sometimes even money.
         </p>
         <p>
-        I am married to my lovely wife Katie whom I've been married to for 3 years. I am an animal person and this is 
-        evidenced by 3 cats and a dog with a whole bunch of fur everywhere.
+        I am married to my lovely wife Katie whom I've been married to for 3 years.
         </p>
         <p>
         I hope that you find my posts to be helpful.
