Added url to G+ too

--- a/app/views/nodes/_node.html.erb
+++ b/app/views/nodes/_node.html.erb
@@ -13,7 +13,7 @@
   </div>
   <div>
     <a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= node.title %>" data-count="horizontal" data-via="JesseDearing">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
-    <div class="g-plusone" data-href="<%= url_for(node) %>"></div>
+    <div class="g-plusone" data-href="http://jessedearing.com<%= url_for(node) %>"></div>
     <div class="fb-like" data-href="http://jessedearing.com<%= url_for(node) %>" data-send="false" data-width="450" data-show-faces="true"></div>
   </div>
 </div>
