--- a/app/views/nodes/_node.html.erb
+++ b/app/views/nodes/_node.html.erb
@@ -12,7 +12,7 @@
     <% end %>
   </div>
   <div>
-    <a href="https://twitter.com/share" class="twitter-share-button" data-text="<%= node.title %>" data-count="horizontal" data-via="JesseDearing">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://jessedearing.com<%= url_for(node) %>" data-text="<%= node.title %>" data-count="horizontal" data-via="JesseDearing">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
     <div class="g-plusone" data-href="http://jessedearing.com<%= url_for(node) %>"></div>
     <div class="fb-like" data-href="http://jessedearing.com<%= url_for(node) %>" data-send="false" data-width="450" data-show-faces="true"></div>
   </div>
