--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div id="comment-<%= comment.id %>" class="comment<%= ' author_comment' if comment.is_author? %>">
   <div class="comment_body">
-    <%= comment.body %>
+    <%= comment.body.gsub("\n", "<br />") %>
   </div>
   <div class="comment_info">
   <span class="gravatar">
