Revert "Fixing line breaks in the view"
This reverts commit 09c3ea7fcb1ca3e8306fe76085a4379a4940077c.

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <div id="comment-<%= comment.id %>" class="comment<%= ' author_comment' if comment.is_author? %>">
   <div class="comment_body">
-    <%= comment.body.gsub("\n", "<br />") %>
+    <%= comment.body %>
   </div>
   <div class="comment_info">
   <span class="gravatar">
