--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" %>
   <%= stylesheet_link_tag "960.css" %>
   <%= stylesheet_link_tag "application.css" %>
+  <%= stylesheet_link_tag "code/tubster.css" %>
   <%= csrf_meta_tag %>
   <link href='http://fonts.googleapis.com/css?family=Neuton:400,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Anonymous+Pro:regular,bold' rel='stylesheet' type='text/css'>
