--- a/public/stylesheets/code/tubster.css
+++ b/public/stylesheets/code/tubster.css
@@ -1,5 +1,6 @@
 /* code{ font-family: monospace; color: #e6e1dc; background-color: #131313; }*/
 pre { font-family: monospace; color: #e6e1dc; background-color: #131313; padding: 5px; }
+.rubyRailsARAssociationMethod { color: #da4939; }
 .lnr { color: #858280; background-color: #131313; }
 .Boolean { color: #3399cc; }
 .rubyRegexp { color: #99cc33; }
