Added DejaVu Sans Mono for code

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -49,7 +49,7 @@ a
 
 code
 {
-  font-family: 'Anonymous Pro', 'Bitstream Vera Sans Mono', 'Andale Mono', 'Courier New', monospace;
+  font-family: 'DejaVu Sans Mono', 'Anonymous Pro', 'Bitstream Vera Sans Mono', 'Andale Mono', 'Courier New', monospace;
 }
 
 /* Header */
