Added DejaVu to pre tags as well

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -157,7 +157,7 @@ h3.node_title a:hover
 
 pre
 {
-  font-family: 'Anonymous Pro', 'Bitstream Vera Sans Mono', 'Courier', monospace;
+  font-family: 'DejaVu Sans Mono', 'Anonymous Pro', 'Bitstream Vera Sans Mono', 'Courier', monospace;
 }
 
 /* Comments */
